--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "dev": "next dev --turbo",
     "postinstall": "prisma generate",
     "lint": "next lint",
-    "start": "next start"
+    "start": "next start",
+    "flush": "npx tsx ./src/lib/prisma-flush.ts"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.6.0",
@@ -23,6 +24,7 @@
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-popover": "^1.1.1",
+    "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.0",
     "@t3-oss/env-nextjs": "^0.10.1",
@@ -65,6 +67,7 @@
     "prettier-plugin-tailwindcss": "^0.5.14",
     "prisma": "^5.14.0",
     "tailwindcss": "^3.4.3",
+    "tsx": "^4.17.0",
     "typescript": "^5.4.2"
   },
   "ct3aMetadata": {
