--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@trpc/client": "next",
     "@trpc/react-query": "next",
     "@trpc/server": "next",
+    "@uploadthing/react": "^6.7.2",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
@@ -41,6 +42,7 @@
     "lucide-react": "^0.399.0",
     "next": "^14.2.1",
     "next-themes": "^0.3.0",
+    "nextjs-toploader": "^1.6.12",
     "react": "^18.3.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.0",
@@ -50,6 +52,7 @@
     "superjson": "^2.2.1",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
+    "uploadthing": "^6.13.2",
     "zod": "^3.23.8"
   },
   "devDependencies": {
