--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "date-fns": "^3.6.0",
     "geist": "^1.3.0",
     "lucide-react": "^0.399.0",
+    "moment": "^2.30.1",
     "next": "^14.2.1",
     "next-themes": "^0.3.0",
     "nextjs-toploader": "^1.6.12",
