feat: sign in with credential provider

--- a/package.json
+++ b/package.json
@@ -49,13 +49,15 @@
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.0",
     "react-hook-form": "^7.52.0",
+    "react-icons": "^5.3.0",
     "server-only": "^0.0.1",
     "sonner": "^1.5.0",
     "superjson": "^2.2.1",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "uploadthing": "^6.13.2",
-    "zod": "^3.23.8"
+    "zod": "^3.23.8",
+    "zustand": "^4.5.5"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
