--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
+    "framer-motion": "^11.3.30",
     "geist": "^1.3.0",
     "lucide-react": "^0.399.0",
     "moment": "^2.30.1",
